// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-eEXVIU djWSin"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-eEXVIU djWSin"
  >
    Default color is Bulma
  </p>
  <p
    className="sc-eEXVIU lcVuka"
    color="piccolo.100"
  >
    Piccolo
  </p>
  <p
    className="sc-eEXVIU bcoyWM"
    color="trunks.100"
  >
    Trunks
  </p>
  <p
    className="sc-eEXVIU pQlRi"
    color="krillin.100"
  >
    Krillin
  </p>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-eEXVIU djWSin"
  >
    Default font-weight is regular
  </p>
  <p
    className="sc-eEXVIU crqVKh"
  >
    Font-weight is bold
  </p>
</div>
`;

exports[`Caption renders line height 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-eEXVIU djWSin"
  >
    Line-height is pre-calculated
  </p>
  <p
    className="sc-eEXVIU gWekzK"
  >
    Custon line-height
  </p>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-eEXVIU djWSin"
  >
    Paragraph is a default tag
  </p>
  <span
    className="sc-eEXVIU djWSin"
  >
    Span tag
  </span>
  <label
    className="sc-eEXVIU djWSin"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-eEXVIU djWSin"
  >
    Default font-size is 16px
  </p>
  <p
    className="sc-eEXVIU btrHUg"
    size={24}
  >
    Size is 24px
  </p>
  <p
    className="sc-eEXVIU izJTDI"
    size={48}
  >
    Size is 48px
  </p>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-eEXVIU djWSin"
  >
    Text-align is not specified
  </p>
  <p
    className="sc-eEXVIU grEs"
  >
    Centered Text
  </p>
  <p
    className="sc-eEXVIU btjdL"
  >
    Right alignment
  </p>
</div>
`;

exports[`Caption renders underline 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-eEXVIU djWSin"
  >
    Default text-decoration is none
  </p>
  <p
    className="sc-eEXVIU beYjQa"
  >
    Underline Text
  </p>
</div>
`;

exports[`Caption renders uppercase 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-eEXVIU djWSin"
  >
    Default text-transform is none
  </p>
  <p
    className="sc-eEXVIU jjKtPc"
  >
    Uppercase Text
  </p>
</div>
`;
